# openCV-projects

hw1/: Makefile  hdsd.odt  main.cpp  opencv.odt
hw1/Source/: 1612840_BT00.cpp
hw2/: Histogram.h  algos.h  helper.h  main.cpp  main_bk.cpp  opencv.odt
hw2/Source/: 1612840_Lab01.cpp  algos.h
hw4/: Makefile  algo_bk.h  algos.h  main.cpp  main_bk.cpp
hw4/Source/: 1612840_Lab02.cpp  1612840_Lab03.cpp  HistogramDrawer.h  algos.h  stdafx.cpp
hw5/: 1612840_Lab04  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw5
hw5/Docs/: .~lock.opencv.odt#
hw5/Source/: Filters.cpp  algos.cpp  main.cpp
hw5/include/: algos.h
hw6/: .~lock.opencv.odt#  1612840_Lab05  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hw6/Source/: EdgeDetect.cpp  EdgeDetect.hpp  ScopedTimer.cpp  ScopedTimer.hpp  main.cpp
hw6/include/: Filters.hpp  Main.hpp
test/: HistogramEqualizer.h  Makefile  algos.h  main.cpp
test/Source/: Histogram.h  HistogramComparator.h
